k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: salon-booking-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: salon-booking

  template:
    metadata:
      labels:
        app: salon-booking

    spec:
      containers:
      - name: salon-booking

        image: 825765402564.dkr.ecr.eu-west-1.amazonaws.com/cloud-native-salon-booking-platform:v1

        ports:
        - containerPort: 80
