k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: salon-frontend

  template:
    metadata:
      labels:
        app: salon-frontend

    spec:
      imagePullSecrets:
        - name: ecr-secret

      containers:
        - name: frontend

          image: 825765402564.dkr.ecr.eu-west-1.amazonaws.com/cloud-native-salon-booking-platform-frontend:v2
          ports:
            - containerPort: 80
