k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: salon-booking-service

spec:
  selector:
    app: salon-booking

  ports:
  - port: 80
    targetPort: 3000

  type: ClusterIP
